--- a/public/style.css
+++ b/public/style.css
@@ -74,8 +74,8 @@ body {
 }
 
 #invitationText {
-  width: 100%;
-  height: 70px; /* Slightly increased height */
+  width: calc(100% - 24px); /* Subtracting padding */
+  height: 70px;
   padding: 12px;
   margin: 12px 0;
   border: 2px solid #FFD700;
@@ -84,7 +84,8 @@ body {
   font-family: 'Varela Round', sans-serif;
   border-radius: 5px;
   resize: none;
-  font-size: 18px; /* Increased font size */
+  font-size: 18px;
+  box-sizing: border-box; /* Include padding and border in the element's total width and height */
 }
 
 button {
@@ -230,4 +231,14 @@ h1, h2, h3 {
 #start button, #createGame button, #joinGame button, #waitingRoom button, #game button, #result button {
   display: block;
   margin: 15px auto;
+}
+
+#endGameButton, #stopWaitingButton {
+  background-color: #FF4136;
+  color: white;
+  margin-top: 20px;
+}
+
+#endGameButton:hover, #stopWaitingButton:hover {
+  background-color: #FF725C;
 }
